# StockCircularBot

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: embedding.py  logger.py  processCirculars.py  qdrant.py  rag.py  start_stop_qdrant.py
